--- a/style.css
+++ b/style.css
@@ -7,20 +7,23 @@ body {
 
 header {
   background-color: white;
-  padding: 25px 120px;
+  padding: 30px 170px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 400;
   position: relative;
   z-index: +1;
+}
+header .heading img{
+  height: 20px;
 }
 
 header .plans {
   border: 3px solid hsl(256, 26%, 20%);
-  padding: 5px 17px;
+  padding: 10px 20px;
   font-weight: 700;
 }
 
@@ -35,7 +38,7 @@ header a {
   text-decoration: none;
   margin-left: 20px;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 16px;
   text-transform: uppercase;
 }
 
@@ -47,32 +50,27 @@ nav a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px 120px;
+  padding: 25px 170px;
   background-color: hsl(256, 26%, 20%);
   color: #fff;
-  height: 400px;
+  /* height: auto; */
+  height: 600px;
 }
 
 .hero .text a {
   text-decoration: none;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 16px;
   text-transform: uppercase;
 }
 
-.hero .image img {
-  height: 600px;
-  position: relative;
-  bottom: 30px;
-}
-
 .text .plans1 {
-  border: 1px solid #fff;
-  color: #fff;
-  padding: 5px 17px;
+  border: 1px solid hsl(273, 4%, 51%);
+  color: hsl(273, 4%, 51%);
+  padding: 10px 30px;
   font-weight: 700;
-  position: relative;
-  bottom: 25px;
+  /* position: relative;
+  top: 20px; */
 }
 
 .plans1:hover {
@@ -80,27 +78,42 @@ nav a:hover {
   color: hsl(256, 26%, 20%);
 }
 
-.text h1 {
+.text .text-line {
+  display: flex;
+  flex-direction: column;
   font-family: "DM Serif Display", sans-serif;
-  font-size: 60px;
+  font-size: 80px;
   font-family: 700;
-  line-height: 60px;
+  line-height: 75px;
+  margin-bottom: 20px;
 }
 
-.text h2 {
-  border: 1px solid #fff;
+.text .line {
+  display: flex;
+  margin-bottom: 60px;
   width: 30%;
+  height: 1px;
+  background-color: hsl(0, 0%, 98%);
 }
 
-.text p {
-  font-size: 15px;
-  position: relative;
-  bottom: 30px;
+.text .text-line2 {
+  display: flex;
+  flex-direction: column;
+  color: hsl(273, 4%, 51%);
+  font-size: 18px;
+  margin-top: 30px;
+  font-weight: 400;
+  margin-bottom: 15px;
+  line-height: 30px;
 }
 
-.hero .image {
-  position: relative;
-  top: 180px;
+.hero .image img {
+  /* margin-top: 0px; */
+  /* padding: 30px; */
+  margin-top: 400px;
+  height: 750px;
+  /* position: relative;
+  top: 180px; */
 }
 
 section .border {
@@ -111,77 +124,93 @@ section .border {
 }
 
 section .border img {
-  height: 370px;
+  height: 670px;
 }
 
 .different {
-  padding: 25px 120px;
+  padding: 20px 170px;
+  padding-top: 300px;
 }
 
 .image2 {
   position: absolute;
-  top: 410px;
+
+  /* position: relative; */
+  top: 600px;
+  left: 5px;
 }
 
 .different-text {
-  position: relative;
-  top: 70px;
+  /* position: relative;
+  top: 70px; */
 }
 
-.different-text h2 {
-  border: 1px solid #000;
-  width: 12%;
-  position: relative;
-  z-index: +1;
+.different-text .line {
+  display: flex;
+  /* margin-bottom: 40px; */
+  width: 10%;
+  height: 1px;
+  background-color: hsl(256, 26%, 20%);
 }
 
 .different .different-text h1 {
-  font-size: 55px;
-  font-weight: 700;
+  font-size: 80px;
+  font-weight: 400;
   font-family: "DM Serif Display", sans-serif;
 }
 
 .container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   gap: 20px;
-  position: relative;
-  top: 80px;
+  /* position: relative;
+  top: 80px; */
 }
 
 .card {
   background: white;
   padding: 10px;
+
   border-radius: 8px;
 }
-
-.card p {
-  font-size: 15px;
+.card h4{
+  font-family: "DM Serif Display", sans-serif;
+  font-size: 35px;
   font-weight: 400;
 }
 
+.card .card-text {
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 400;
+  color:  hsl(273, 4%, 51%);
+  padding-bottom: 80px;
+
+}
+
 .different .conatiner1 {
-  padding: 20px;
+  padding: 20px 50px;
+  margin-top: 100px;
   background: hsl(256, 26%, 20%);
   color: #fff;
   height: 150px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: relative;
-  top: 150px;
 }
 
-.different .conatiner1 h2 {
+.different .conatiner1 .content {
+  display: flex;
+  flex-direction: column;
   font-weight: 800;
   font-size: 40px;
   font-family: "DM Serif Display", sans-serif;
-  position: relative;
-  left: 35px;
 }
 
 .different .conatiner1 .plans2 {
-  padding: 5px 10px;
+  /* padding: 5px 10px; */
   font-weight: 700;
   color: #fff;
 }
@@ -189,36 +218,87 @@ section .border img {
 .different .conatiner1 a {
   text-decoration: none;
   font-weight: 500;
-  font-size: 15px;
-  text-transform: uppercase;
-  border: 2px solid white;
+
   color: #fff;
   text-align: center;
   display: inline-block;
-  padding: 4px 20px;
+
   line-height: 20px;
   height: 35px;
   box-sizing: border-box;
   vertical-align: middle;
   margin: 0;
-  position: relative;
-  right: 140px;
+  /* position: relative; */
+  /* right: 140px; */
+}
+
+.different .find-out {
+  /* height: 250px; */
+  background-color: hsl(256, 26%, 20%);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 80px;
+  font-family: "DM Serif Display", sans-serif;
+  /* background-attachment: fixed; */
+  background-image: url(./images/bg-pattern-how-we-work-desktop.svg);
+  background-size:  500px 300px;
+  background-repeat: no-repeat;
+  background-position:  auto  ;
+  background-position: right;
+}
+.different .find-out .find-text {
+  width: 50%;
+  /* height: 100%; */
+}
+.different .find-out .find-btn {
+  /* height: 300px; */
+
+  /* background-attachment: fixed; */
+  /* width: 50%;  */
+  /* text-align: center; */
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-left: 30px;
+}
+.different .find-out .find-btn .plans2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.different .find-out .find-text h3 {
+  font-family: "DM Serif Display", sans-serif;
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 70px;
+}
+.different .find-out .find-btn a {
+  color: hsl(0, 0%, 98%);
+  text-decoration: none;
+  font-size: 15px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  border: 2px solid white;
+  padding: 10px 20px;
+  font-weight: 400;
 }
 
 .different .find-out .image4 {
-  position: absolute;
-  right: 119px;
-  top: 1135px;
-  z-index: +1;
-  height: 80px;
+  /* position: absolute;
+  right: 120px; */
+  /* z-index: +1; */
+  /* height: 80px; */
 }
 
 .footer {
-  padding: 25px 120px;
+  padding: 65px 170px;
+  margin-top: 80px;
   background: hsl(0, 0%, 98%);
-  position: relative;
-  top: 200px;
-  height: auto;
+  /* position: relative;
+  top: 200px; */
+  /* height: auto; */
 }
 
 .footer .footer-upper {
@@ -237,45 +317,54 @@ section .border img {
 
 .footer-lower {
   display: flex;
-  justify-content: space-evenly;
-  position: relative;
+  justify-content: space-between;
+  margin-right: 150px;
+  /* position: relative;
   right: 140px;
-  bottom: 10px;
+  bottom: 10px; */
 }
 
-.footer-lower .lower h6 {
+.footer-lower .point h6 {
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 700;
+  font-size: 16px;
+  color:  hsl(273, 4%, 51%);
 }
 
-.footer .footer-lower .lower .company {
+.footer .footer-lower .point .sub-point {
   display: flex;
   justify-content: flex-start;
-  gap: 12px;
+  gap: 13px;
   flex-direction: column;
 }
 
-.footer-lower .lower .company a {
+.footer-lower .point .sub-point a {
   color: hsl(270, 9%, 17%);
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
 }
 
-.footer .footer-image img {
+.footer .footer-image {
   position: absolute;
-  top: 0px;
+  top: 2235px;
   left: 0px;
 }
 
-.company a:hover {
+.sub-point a:hover {
   text-decoration: underline !important;
   color: black;
 }
-/* .hamburger {
-  visibility: hidden;
-} */
+.hamburger {
+  display: none;
+}
+section .mobile-left{
+  display: none;
+}
+section .mobile-right{
+  display: none;
+}
 
 /* @media (max-width: 991px) {
   header{
@@ -334,74 +423,227 @@ section .border img {
         width: 100%;
     }
  } */
-@media (max-width: 767px) {
-  header {
-    padding: 20px;
-    /* flex-direction: column; */
-    align-items: flex-start;
-    display: flex;
-    justify-content: space-around;
-  }
-  header .hamburger {
-    visibility: inherit;
-    justify-content: flex-end;
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  header,
+  .hero,
+  .different,
+  .footer {
+    padding: 15px 100px;
   }
   header nav a {
-    visibility: hidden;
     display: none;
-    margin-left: 0;
-    margin-bottom: 10px;
   }
-
+  header .hamburger {
+    display: flex;
+  }
   .hero {
-    flex-direction: column;
-    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+  }
+  .hero .text .text-line span {
+    font-size: 36px;
+    line-height: 40px;
+  }
+  .hero .text .text-line2 span {
+    font-size: 15px;
+  }
+  .hero .image img {
+    height: 300px;
+    position: relative;
+    bottom: 180px;
+  }
+  .hero .border .img {
+    position: relative;
+    bottom: 100px;
+  }
+  .different {
+    margin-top: 120px;
+  }
+  .different .different-text h1 {
+    font-size: 70px;
+  }
+  .different .find-out {
+    padding: 10px 40px;
+    background-size: auto 370px;
+    background-position: right;
     height: auto;
   }
-
-  .text h1 {
-    font-size: 45px;
+  .different .find-out .find-text h3 {
+    font-size: 50px;
   }
-  .different .different-text{
+
+  /* .different .find-out .conatiner1 .content span {
+    font-size: 46px;
+  }
+  .different .find-out .conatiner1 a {
     position: relative;
-    bottom: 40px;
+    left: 8px;
   }
-
+  .different .find-out .conatiner1 .image4 img {
+    position: relative;
+    right: 22px;
+  } */
+}
+@media screen and (max-width: 767px) {
+  header,
+  .different,
+  .footer {
+    padding: 15px 25px;
+  }
+  header nav a {
+    display: none;
+  }
+  header .hamburger {
+    display: flex;
+  }
+  section .mobile-left{
+    display: flex;
+    position: absolute;
+    top: 515px;
+    height: auto;
+  }
+  section .mobile-right{
+    display: none;
+    /* position: relative;
+    left: 250px;
+    bottom: 100px; */
+    /* left: 0px; */
+  }
+  .hero {
+    flex-direction: column-reverse;
+    /* margin-top: 350px; */
+    height: auto;
+    padding: 0px;
+  }
+  .hero .text {
+    /* padding: 20px; */
+    position: relative;
+  }
+  .hero .image img {
+    margin-top: 0px;
+    height: auto;
+    /* height: 100%; */
+    width: 100%;
+    padding: 1px;
+    /* padding: 0px; */
+    /* margin-top:400px;
+    padding-top: 200px; */
+  }
+  .hero .text .line {
+  }
+  .hero .text {
+    margin-bottom: 70px;
+    text-align: center;
+    margin-top: 50px;
+  }
+  .hero .text .line {
+    display: none;
+  }
+  .hero .text .text-line span {
+    font-size: 40px;
+    line-height: 40px;
+  }
+  .hero .text .text-line2 span {
+    font-size: 10px;
+    line-height: 20px;
+  }
+  section .border {
+    display: none;
+  }
+  section .image2 {
+    display: none;
+  }
+  .different{
+    margin-top: 50px;
+  }
+  .different .different-text .line {
+    margin-left: 100px;
+    width: 40%;
+    /* text-align: center; */
+  }
+  .different .different-text h1 {
+    font-size: 43px;
+    font-weight: 500;
+    text-align: center;
+  }
   .container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     gap: 10px;
   }
-  .container .card h4 {
-    text-align: center;
+  .card .card-text{
+    font-size: 14px;
   }
-  .container .card p {
-    text-align: center;
-  }
-  .container .card img {
-    margin-left: 100px;
-  }
-  .different .find-out .container1 {
+  .different .find-out {
     flex-direction: column;
-    align-items: center;
+    /* height: 350px; */
+    padding: 20px 50px;
+
+    /* background-image: none; */
+    /* background-size: auto; */
+    /* background-size: auto 190px; */
+    background-position: right ;
+    background-size: 400px 350px;
+    
   }
-  .different .find-out .conatiner1 h2{
-    font-size: 25px;
+  .different .find-out .find-text {
+    /* margin: 35px; */
+    flex-wrap: wrap;
+  
   }
-  .different .find-out .conatiner1 a{
-    font-size: 10px;
+  .different .find-out .find-btn {
+    /* height: auto; */
+    padding-left: 30px;
+    /* width: 50%; */
+    
+    /* padding: 20px 40px; */
+    /* display: flex;
+    justify-content: center; */
+    /* padding-bottom: 10px; */
+    /* width: 80%; */
+  }
+  .different .find-out .find-btn a{
+    font-size: 14px;
+    padding: 5px 10px;
+  }
+  .different .find-out .find-text h3 {
+    font-size: 26px;
+    line-height: 33px;
+    text-align: center;
+  }
+  .different .container .card {
+    width: 100%;
+  }
+  /* .footer {
     position: relative;
-    right: 25px;
-  }
-
-  .footer-lower {
+  } */
+  footer .footer-upper {
+    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    gap: 10px;
+  }
+  .footer-lower {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin-right: 0px;
+  }
+  .footer .footer-image img {
+    position: relative;
+    bottom: 430px;
+    /* right: 0px; */
   }
 
-  .footer-lower .lower {
-    margin-bottom: 10px;
+  .footer-lower .point {
+    /* margin-bottom: 10px; */
+    /* justify-content: center; */
+    /* align-items: center; */
+  }
+  .footer .footer-image{
+    display: none;
   }
 }
